_sass/main.scss
/* Global Styles */  
  
* {  
  margin: 0;  
  padding: 0;  
  box-sizing: border-box;  
  word-wrap: break-word;  
}  
  
/* Body Styles */  
  
body {  
  display: grid;  
  grid-template-rows: 100px 80px 1fr 100px 100px;  
  grid-template-columns: repeat(4, 1fr); /* Use repeat() function to create 4 equal columns */  
  min-height: 100vh;  
  margin: 0 auto;  
  background-color: #616161;  
}  

/* Header and Nav Bar Styles */  

header {  
  grid-row: 2;  
  grid-column: 2 / 4; 
  color: #444444;  
  padding: 20px;  
  display: flex;  
  background-color: #959595;  
  text-align: center;
  min-width: 300px; 
}
  
nav {  
  grid-row: 2;  
  grid-column: 3;  
  color: #444444;  
  justify-content: space-between;  
  align-items: center;  
}  
  
nav ul {  
  list-style: none;    
  display: flex;  
}  
  
nav ul li {  
  margin-right: 20px;  
}  
  
  
nav a {  
  text-decoration: none;  
  color: #444444;  
  transition: color 0.2s ease;  
}  
  
nav a:hover {  
  color: #000;  
}  
  
/* Container Styles */  
  
.container {  
  grid-row: 3;  
  grid-column: 2 / 4;   
  background-color: #959595;  
  color: #000000;  
  padding:20px;  
  display: flex;  
  flex-direction: column;  
  min-width: 300px; 
}  
    
/* Footer Styles */  

footer {  
  grid-row: 4;  
  grid-column: 2 / 4; 
  color: #444444;  
  padding: 20px;  
  text-align: center;  
  background-color: #959595;   
  display: flex; 
  min-width: 0;//needs to be set
}

